tests/fixtures/errors/arity_mismatch.assura
// MUST REJECT A03001
// Boolean operation on non-boolean operand should be rejected.

contract BoolOpOnInt {
    input { x: Int }
    ensures { x && true }
}
